Descarga de la librería de cypress e implementación de las pruebas al incio de sesión
Se han agregado ids en los componentes necesarios para facilitar el testing

--- a/src/app/features/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.html
@@ -11,6 +11,6 @@
       <input type="password" matInput formControlName="userPassword" />
       <mat-error>Invalid field</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="logIn()">Log in</button>
+    <button mat-raised-button color="primary" (click)="logIn()" id="loginButton">Log in</button>
   </form>
 </div>
