--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,6 +5,6 @@
     (click)="onClickMenuButton()">
     <mat-icon>menu</mat-icon>
   </button>
-  <a class="title" routerLink="/">BackOffice Tienda Mercadona</a>
+  <a class="title" routerLink="/" class="headerTitle">BackOffice Tienda Mercadona</a>
   <span class="spacer"></span>
 </mat-toolbar>
