--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -37,6 +37,7 @@
             [min]="minInput"
             [max]="maxInput"
             class="stockInput"
+            id="{{productStock.product.name}}Stock"
           />
         </mat-form-field>
         <button
@@ -44,6 +45,7 @@
           (click)="changeStock(productStock,units.value, shop.id)"
           value="product"
           class="stockButton"
+          id="{{productStock.product.name}}Button"
         >
           Apply Stock
         </button>
