--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
 
     <mat-list-item *ngFor="let module of modules; let i = index">
       <mat-divider></mat-divider>
-      <a [routerLink]="module?.url" class="module-list-item">
+      <a [routerLink]="module?.url" class="module-list-item" [id]="module.name">
         <mat-icon mat-list-icon>{{ module.icon }}</mat-icon>
         <div mat-line>{{ module.name }}</div>
       </a>
