change shop model and product model

--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -54,6 +54,6 @@
     </mat-list>
   </ng-container>
   <ng-template #noProducts>
-    <span> The shop hasn`t got products</span>
+    <span> The shop doesn`t have products</span>
   </ng-template>
 </div>
