--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -8,49 +8,44 @@
         <mat-accordion>
           <mat-expansion-panel (opened) = "panelOpenState = true" (closed) = "panelOpenState = false">
 
-      <mat-accordion>
-        <mat-expansion-panel (opened) = "panelOpenState = true" (closed) = "panelOpenState = false" [id]="shop.name">
+            <mat-expansion-panel-header>
+              <div class="info">
+                <button mat-raised-button class = "botonShop" id="editShop{{shop.name}}" (click)="modifyShop(shop.id)">
+                  <mat-icon> edit </mat-icon>
+                </button>
+                <button mat-raised-button id = "{{shop.name}}activeShopButton" class = "botonShop" (click)="desactivateShop(shop)">
+                  <mat-icon> delete_forever </mat-icon>
+                </button>
+                <mat-panel-title>
+                  <mat-list-item role="listitem" class="shop">
+                    {{ shop.name }}
+                  </mat-list-item>
+                </mat-panel-title>
+              </div>
+            </mat-expansion-panel-header>
 
-          <mat-expansion-panel-header>
-            <div class = "info">
-              <button mat-raised-button id = "{{shop.name}}editShopActiveButton" class = "botonShop" (click)="modifyShop($event,shop.id)">
-                <mat-icon> edit </mat-icon>
-              </button>
-
-              <button mat-raised-button id = "{{shop.name}}deactiveShopButton" class = "botonShop" (click)="deActivateShop($event,shop)">
-                <mat-icon> delete_forever </mat-icon>
-              </button>
-
-              <mat-panel-title>
-                <mat-list-item role="listitem" class="shop">
-                  {{ shop.name }}
-                </mat-list-item>
-              </mat-panel-title>
+            <div class="hiddenIfo">
+              <div class="firstColumnHidden">
+                <mat-list role="list">
+                  <br>
+                  <mat-list-item role="listitem">
+                    <div class="expansionContent">
+                      <span> Name: {{ shop.name }} </span>
+                      <span> Adress: {{ shop.address.street }} </span>
+                      <br>
+                      <button mat-raised-button class="viewProducts" color="accent" (click)="openProductList(shop)">
+                        View products
+                      </button>
+                    </div>
+                  </mat-list-item>
+                  <br>
+                </mat-list>
+              </div>
             </div>
-          </mat-expansion-panel-header>
-
-          <div class="hiddenIfo">
-            <div class="firstColumnHidden">
-              <mat-list role="list">
-                <br>
-                <mat-list-item role="listitem">
-                  <div class="expansionContent">
-                    <span> Name: {{ shop.name }} </span>
-                    <span> Adress: {{ shop.address.street }} </span>
-                    <br>
-                    <button mat-raised-button class = "viewProducts" color = "accent" (click) = "openProductList(shop)" id="viewProducts">
-                      View products
-                    </button>
-                  </div>
-                </mat-list-item>
-                <br>
-              </mat-list>
-            </div>
-          </div>
-        </mat-expansion-panel>
-      </mat-accordion>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </div>
     </div>
-    <mat-divider></mat-divider>
   </ng-container>
 
 
@@ -67,7 +62,7 @@
                 <button mat-raised-button class = "botonShop" id="editShop{{shop.name}}" (click)="modifyShop(shop.id)">
                   <mat-icon> edit </mat-icon>
                 </button>
-                <button mat-raised-button id = "{{shop.name}}activeShopButton" class = "botonShop" (click)="activateShop($event,shop)">
+                <button mat-raised-button id = "{{shop.name}}activeShopButton" class = "botonShop" (click)="activeShop(shop)">
                   <mat-icon> autorenew </mat-icon>
                 </button>
                 <mat-panel-title>
