When a product in a shop get out of stock, is deleted from that shop

--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -54,6 +54,6 @@
     </mat-list>
   </ng-container>
   <ng-template #noProducts>
-    <span> The shop doesn`t have products</span>
+    <span> The shop is empty</span>
   </ng-template>
 </div>
