--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -90,7 +90,7 @@
           <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
               <div class="info">
-                <button mat-raised-button class="prodButton" (click)="modifyProduct(product.id)">
+                <button mat-raised-button class="prodButton" id="{{product.name}}EditActive" (click)="modifyProduct(product.id)">
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-raised-button class="deleteButton" (click)="deleteProduct(product)">
@@ -103,7 +103,7 @@
                 </mat-panel-title>
               </div>
             </mat-expansion-panel-header>
-            <div class="infoOculta" id="{{ product.name }}">
+            <div class="infoOculta" id="{{product.name}}">
               <div *ngIf="!!product.image">
                 <img src="{{ product.image }}"
                 alt="Imagen de {{ product.name }}">
@@ -166,7 +166,7 @@
           <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
               <div class="info">
-                <button mat-raised-button class="prodButton" (click)="modifyProduct(product.id)">
+                <button mat-raised-button class="prodButton" id="{{product.name}}EditNoActive" (click)="modifyProduct(product.id)">
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-raised-button class="deleteButton" (click)="activeProduct(product)">
@@ -179,7 +179,7 @@
                 </mat-panel-title>
               </div>
             </mat-expansion-panel-header>
-            <div class="infoOculta" id="{{ product.name }}">
+            <div class="infoOculta" id="{{product.name}}Panel">
               <div *ngIf="!!product.image">
                 <img src="{{ product.image }}"
                 alt="Imagen de {{ product.name }}">
