Revert "Merge branch 'develop' into feature/C6-ModCategoria"
This reverts commit f3b4b6c00e224d7a6cf8ad3b084e863e72bfb4ee, reversing
changes made to fe7fa295d02a6b4e571a4302d11bedec061bd549.

--- a/src/app/features/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.html
@@ -3,12 +3,12 @@
     <span class="titulo">Log In</span>
     <mat-form-field>
       <mat-label>User</mat-label>
-      <input type="text" matInput formControlName="userName" id="emailInput"/>
+      <input type="text" matInput formControlName="userName" />
       <mat-error>Invalid field</mat-error>
     </mat-form-field>
     <mat-form-field>
       <mat-label>Password</mat-label>
-      <input type="password" matInput formControlName="userPassword" id="passwordInput" />
+      <input type="password" matInput formControlName="userPassword" />
       <mat-error>Invalid field</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="logIn()" id="loginButton">Log in</button>
