--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -3,7 +3,6 @@
   color="accent"
   (click)="onNoClick()"
   class="closeButton"
-  id="closeDialog"
 >
   <mat-icon>close</mat-icon>
 </button>
@@ -38,7 +37,7 @@
             [min]="minInput"
             [max]="maxInput"
             class="stockInput"
-            [attr.data-product-id]="'input_'+productStock.product.id"
+            id="{{productStock.product.name}}Stock"
           />
         </mat-form-field>
         <button
@@ -46,7 +45,7 @@
           (click)="changeStock(productStock,units.value, shop.id)"
           value="product"
           class="stockButton"
-          [attr.data-product-id]="'button_'+productStock.product.id"
+          id="{{productStock.product.name}}Button"
         >
           Apply Stock
         </button>
