Cambio HTML Product

--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -30,20 +30,6 @@
                 {{ PRODUCT_ERRORS.price.notProvided }}
               </mat-error>
             </mat-form-field>
-            <mat-form-field class="formContainer">
-              <mat-label> Categories </mat-label>
-              <mat-select class="input" formControlName="categories" required>
-                <div *ngFor="let cat of categories">
-                  <mat-option *ngIf="cat.active===true" [value]="cat.id">
-                    {{ cat.name }}
-                  </mat-option>
-                </div>
-              </mat-select>
-              <mat-error
-                *ngIf="productForm.get('categories')?.errors && productForm.get('categories')?.hasError('required')">
-                {{ PRODUCT_ERRORS.categories.notProvided }}
-              </mat-error>
-            </mat-form-field>
           </div>
           <div class="segundaCol">
             <mat-form-field class="formContainer">
@@ -121,17 +107,19 @@
                     </span>
                   </mat-list-item>
                 </mat-list>
-                <!--<mat-list role="list">
+                <mat-list role="list">
                   <mat-list-item role="listitem">
                     <span> Categories: </span>
                     <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
-                      <mat-chip *ngFor= "let category of product.categories" (removed) = "removeCategory(product, category)">
-                          <span> {{ category.id }} </span>
-                          <mat-icon matChipRemove> cancel </mat-icon>
+                      <mat-chip *ngFor= "let category of product.categories">
+                          <span>{{category.name}}</span>
+                          <button matChipRemove>
+                            <mat-icon matChipRemove> cancel </mat-icon>
+                          </button>
                       </mat-chip>
                     </mat-chip-list>
                   </mat-list-item>
-                </mat-list>-->
+                </mat-list>
               </div>
               <div class="segundaColOculta">
                 <mat-list role="list">
@@ -201,10 +189,10 @@
                   <mat-list-item role="listitem">
                     <span> Categories: </span>
                     <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
-                      <mat-chip *ngFor= "let category of product.categories" (removed) = "removeCategory(product, category)">
-                          <span> {{ category.id }} </span>
-                          <mat-icon matChipRemove> cancel </mat-icon>
-                      </mat-chip>
+                      <mat-chip *ngFor= "let category of product.categories">
+                        <span>{{category.name}}</span>
+                        <mat-icon matChipRemove> cancel </mat-icon>
+                    </mat-chip>
                     </mat-chip-list>
                   </mat-list-item>
                 </mat-list>
