Revert "Merge branch 'feature/C6-ModCategoria' into develop"
This reverts commit f7f4b04ed53cac0ea36d2874c37faa77490b5e84, reversing
changes made to 33c757be3e47df5d0512d03c3130723ce5c653fb.

--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -3,6 +3,7 @@
   color="accent"
   (click)="onNoClick()"
   class="closeButton"
+  id="closeDialog"
 >
   <mat-icon>close</mat-icon>
 </button>
@@ -37,7 +38,7 @@
             [min]="minInput"
             [max]="maxInput"
             class="stockInput"
-            id="{{productStock.product.name}}Stock"
+            [attr.data-product-id]="'input_'+productStock.product.id"
           />
         </mat-form-field>
         <button
@@ -45,7 +46,7 @@
           (click)="changeStock(productStock,units.value, shop.id)"
           value="product"
           class="stockButton"
-          id="{{productStock.product.name}}Button"
+          [attr.data-product-id]="'button_'+productStock.product.id"
         >
           Apply Stock
         </button>
