--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -3,12 +3,12 @@
 <mat-list role="list" class="listShop">
   <h1>Active Shops</h1>
   <ng-container *ngFor="let shop of shops">
-    <div *ngIf="shop.active">
+    <div *ngIf="shop.active" id="{{shop.name}}">
       <div class = "containerProd">
         <mat-accordion>
-          <mat-expansion-panel (opened) = "panelOpenState = true" (closed) = "panelOpenState = false">
+          <mat-expansion-panel (opened) = "panelOpenState = true" (closed) = "panelOpenState = false" [attr.data-shop-id]="'expansion_'+shop.id">
 
-            <mat-expansion-panel-header>
+            <mat-expansion-panel-header >
               <div class="info">
                 <button mat-raised-button class = "botonShop" id="editShop{{shop.name}}" (click)="modifyShop(shop.id)">
                   <mat-icon> edit </mat-icon>
@@ -17,7 +17,7 @@
                   <mat-icon> delete_forever </mat-icon>
                 </button>
                 <mat-panel-title>
-                  <mat-list-item role="listitem" class="shop">
+                  <mat-list-item role="listitem" class="shop" >
                     {{ shop.name }}
                   </mat-list-item>
                 </mat-panel-title>
@@ -33,7 +33,7 @@
                       <span> Name: {{ shop.name }} </span>
                       <span> Adress: {{ shop.address.street }} </span>
                       <br>
-                      <button mat-raised-button class="viewProducts" color="accent" (click)="openProductList(shop)">
+                      <button mat-raised-button class="viewProducts" color="accent" (click)="openProductList(shop)" [attr.data-shop-button]="'button_'+shop.id">
                         View products
                       </button>
                     </div>
