--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -163,7 +163,7 @@
     <div *ngIf="product.active === false">
       <div class="containerProd">
         <mat-accordion>
-          <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+          <mat-expansion-panel  (opened)="panelOpenState = true" (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
               <div class="info">
                 <button mat-raised-button class="prodButton" id="{{product.name}}EditNoActive" (click)="modifyProduct(product.id)">
@@ -173,7 +173,7 @@
                   <mat-icon>autorenew</mat-icon>
                 </button>
                 <mat-panel-title>
-                  <mat-list-item role="listitem" class="product">{{
+                  <mat-list-item id = "{{product.name}}ExpansionPanel" role="listitem" class="product">{{
                     product.name
                     }}</mat-list-item>
                 </mat-panel-title>
@@ -201,10 +201,12 @@
                   <mat-list-item role="listitem">
                     <span> Categories: </span>
                     <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
-                      <mat-chip *ngFor= "let category of product.categories" (removed) = "removeCategory(product, category)">
-                          <span> {{ category.id }} </span>
-                          <mat-icon matChipRemove> cancel </mat-icon>
-                      </mat-chip>
+                      <ng-container *ngFor= "let category of product.categories">
+                        <mat-chip *ngIf= "category.active" (removed) = "removeCategory(product, category)">
+                            <span> {{ category.name }} </span>
+                            <mat-icon matChipRemove> cancel </mat-icon>
+                        </mat-chip>
+                      </ng-container>
                     </mat-chip-list>
                   </mat-list-item>
                 </mat-list>
